RESOLVED FIXED 278276
[WebGPU] Fix -Wmissing-designated-field-initializers warnings for upstream clang
https://bugs.webkit.org/show_bug.cgi?id=278276
Summary [WebGPU] Fix -Wmissing-designated-field-initializers warnings for upstream clang
David Kilzer (:ddkilzer)
Reported 2024-08-17 09:57:46 PDT
[WebGPU] Fix -Wmissing-designated-field-initializers warnings for upstream clang. Build errors: Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:1371:13: error: missing field 'vertexArgumentBufferIndex' initializer [-Werror,-Wmissing-designated-field-initializers] 1371 | }; | ^ 1 error generated. Source/WebGPU/WebGPU/BindGroupLayout.mm:261:13: error: missing field 'bufferSizeForBinding' initializer [-Werror,-Wmissing-designated-field-initializers] 261 | }; | ^ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-17 09:58:04 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-08-17 10:21:10 PDT
David Kilzer (:ddkilzer)
Comment 3 2024-08-17 17:26:09 PDT
Committed 282392@main (0bd81e9): https://commits.webkit.org/282392@main Reviewed commits have been landed. Closing PR #32346 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.