[WebGPU] Fix -Wmissing-designated-field-initializers warnings for upstream clang <https://bugs.webkit.org/show_bug.cgi?id=278276> <rdar://134141652>

Reviewed by Mike Wyrzykowski.

Define initializers for every struct field.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertStructs):
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::Device::createBindGroupLayout):

Canonical link: https://commits.webkit.org/282392@main